# traj_flow

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: SCHEMA.md  download.py
evaluation/: evaluate.py  metrics.py  moving_subset_analysis.py
hitl/: review_app.py
models/: baseline_ca.py  baseline_cv.py  baseline_xgb.py  finetune.py  finetune_round2.py  lstm.py  train_lstm.py  train_pretrain.py  train_transformer_full.py  transformer.py
results/: metrics_comparison.md
scripts/: run_pipeline.sh
src/trajflow/: __init__.py  cli.py  paths.py
src/trajflow/data/: download.py  preprocess.py
src/trajflow/evaluation/: evaluate.py  moving_subset_analysis.py  seed_variance.py
src/trajflow/hitl/: flag_uncertain.py  review_app.py
src/trajflow/models/: baseline_ca.py  baseline_cv.py  baseline_xgb.py  finetune.py  finetune_lstm.py  finetune_lstm_round2.py  finetune_regularization_sweep.py  finetune_round2.py  lstm.py  train_lstm.py  train_lstm_pretrain.py  train_pretrain.py  train_transformer_ar_full.py  train_transformer_full.py  transformer.py  transformer_ar.py
src/trajflow/viz/: dashboard.py  model_registry.py  scene_overlay.py
tests/: test_baselines.py  test_data_scaleup.py  test_evaluate_logging.py  test_hitl.py  test_metrics.py  test_seed_variance.py  test_transformer_ar.py
viz/: dashboard.py  model_registry.py  scene_overlay.py
